--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:columnCount="2"
-    android:orientation="horizontal"
     android:rowCount="2"
+    android:background="@drawable/lake_sunset"
     tools:context="com.example.antu.antfinder.MainActivity">
 
     <LinearLayout
@@ -26,15 +26,15 @@
             android:id="@+id/bug-btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Bug report"
-            android:onClick="bug_report"/>
+            android:onClick="bug_report"
+            android:text="Bug report" />
 
         <TextView
             android:id="@+id/bug_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Enter the room that is unavaliable"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
 
         <EditText
             android:id="@+id/bug_edit"
@@ -42,15 +42,15 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
 
         <Button
             android:id="@+id/bug_submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="bug_submit"
             android:text="Submit"
-            android:visibility="invisible"
-            android:onClick="bug_submit"/>
+            android:visibility="invisible" />
     </LinearLayout>
 
     <RelativeLayout
@@ -66,8 +66,8 @@
             android:layout_below="@+id/search_btn"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="21dp"
-            android:maxLines = "20"
-            android:scrollbars = "vertical"/>
+            android:maxLines="20"
+            android:scrollbars="vertical" />
 
         <Button
             android:id="@+id/search_btn"
@@ -80,7 +80,7 @@
             android:layout_row="0"
             android:onClick="searchClasses"
             android:text="Search for classes"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/header_txt"
