--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#ffc65e</color>
     <color name="colorPrimaryDark">#304ffe</color>
-    <color name="colorAccent">#170f39</color>
+    <color name="colorAccent">#312274</color>
     <color name="primary_text_default_material_dark">#1a204f</color>
 </resources>
