--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,22 +18,34 @@
 
         <TextView
             android:id="@+id/place_lst"
+            android:layout_marginLeft="10dp"
             android:layout_width="match_parent"
             android:layout_height="130dp"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/bug-btn"
+            android:alpha="0.80"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@color/colorAccent"
             android:onClick="bug_report"
-            android:text="Bug report" />
+            android:text="Bug report"
+            android:textColor="@android:color/background_light" />
 
         <TextView
             android:id="@+id/bug_txt"
+            android:layout_marginLeft="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Enter the room that is unavaliable"
+            android:text="Enter the room that is unavailable"
+            android:textColor="@color/colorAccent"
+            android:textSize="14sp"
+            android:textStyle="bold"
             android:visibility="invisible" />
 
         <EditText
@@ -48,7 +60,11 @@
             android:id="@+id/bug_submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorAccent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:onClick="bug_submit"
+            android:textColor="@android:color/background_light"
             android:text="Submit"
             android:visibility="invisible" />
     </LinearLayout>
@@ -63,6 +79,10 @@
             android:id="@+id/class_list"
             android:layout_width="wrap_content"
             android:layout_height="130dp"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp"
+            android:textStyle="bold"
             android:layout_below="@+id/search_btn"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="21dp"
@@ -71,15 +91,19 @@
 
         <Button
             android:id="@+id/search_btn"
+            android:alpha="0.80"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_alignEnd="@+id/outdoor_btn"
             android:layout_alignRight="@+id/outdoor_btn"
             android:layout_below="@+id/room_edit"
             android:layout_column="1"
             android:layout_row="0"
+            android:background="@color/colorAccent"
             android:onClick="searchClasses"
             android:text="Search for classes"
+            android:textColor="@android:color/background_light"
             android:visibility="invisible" />
 
         <TextView
@@ -90,34 +114,51 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginTop="20dp"
-            android:text="Are you indoors or outdoors?" />
+            android:fontFamily="sans-serif"
+            android:text="Are you indoors or outdoors?"
+            android:textColor="@color/colorAccent"
+            android:textSize="12sp"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/indoor_btn"
+            android:alpha="0.80"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_alignEnd="@+id/outdoor_btn"
             android:layout_alignRight="@+id/outdoor_btn"
             android:layout_below="@+id/header_txt"
+            android:background="?attr/colorAccent"
+            android:elevation="@android:dimen/notification_large_icon_height"
             android:onClick="on_indoors"
-            android:text="Indoors" />
+            android:text="Indoors"
+            android:textColor="@android:color/background_light" />
 
         <Button
             android:id="@+id/outdoor_btn"
+            android:alpha="0.80"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_below="@+id/indoor_btn"
             android:layout_centerHorizontal="true"
+            android:background="@color/colorAccent"
+            android:backgroundTint="@color/colorAccent"
             android:onClick="on_outdoors"
-            android:text="Outdoors" />
+            android:text="Outdoors"
+            android:textColor="@android:color/background_light" />
 
         <TextView
             android:id="@+id/building_txt"
+            android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/outdoor_btn"
             android:layout_centerHorizontal="true"
             android:text="What building are you in?"
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold"
             android:visibility="invisible" />
 
         <EditText
@@ -134,11 +175,14 @@
 
         <TextView
             android:id="@+id/room_txt"
+            android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/building_edit"
             android:layout_centerHorizontal="true"
             android:text="What Room are you  in?"
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold"
             android:visibility="invisible"
             tools:text="What room are you in " />
 
